--- a/tests/IntegrationTests/CloudFileSystem.Application.IntegrationTests/CloudFileSystem.Application.IntegrationTests.csproj
+++ b/tests/IntegrationTests/CloudFileSystem.Application.IntegrationTests/CloudFileSystem.Application.IntegrationTests.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+	<LangVersion>10</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
