--- a/tests/UnitTests/CloudFileSystem.Infrastructure.UnitTests/CloudFileSystem.Infrastructure.UnitTests.csproj
+++ b/tests/UnitTests/CloudFileSystem.Infrastructure.UnitTests/CloudFileSystem.Infrastructure.UnitTests.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+	<LangVersion>10</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
