--- a/src/CloudFileSystem.WebAPI/CloudFileSystem.WebAPI.csproj
+++ b/src/CloudFileSystem.WebAPI/CloudFileSystem.WebAPI.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
