feat(Application): Read document properties use case

--- a/src/CloudFileSystem.Application/CloudFileSystem.Application.csproj
+++ b/src/CloudFileSystem.Application/CloudFileSystem.Application.csproj
@@ -12,11 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UseCases\ReadDocumentProperties\" />
-  </ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Dawn.Guard" Version="1.12.0" />
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
