--- a/tests/UnitTests/CloudFileSystem.Application.UnitTests/CloudFileSystem.Application.UnitTests.csproj
+++ b/tests/UnitTests/CloudFileSystem.Application.UnitTests/CloudFileSystem.Application.UnitTests.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.17.0" />
+    <PackageReference Include="FluentAssertions" Version="6.6.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Moq" Version="4.17.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
