--- a/tests/UnitTests/CloudFileSystem.WebAPI.UnitTests/CloudFileSystem.WebAPI.UnitTests.csproj
+++ b/tests/UnitTests/CloudFileSystem.WebAPI.UnitTests/CloudFileSystem.WebAPI.UnitTests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
 
     <IsPackable>false</IsPackable>
 	<LangVersion>10</LangVersion>
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.17.0" />
+    <PackageReference Include="FluentAssertions" Version="6.6.0" />
+    <PackageReference Include="HttpContextMoq" Version="1.2.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Moq" Version="4.17.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
@@ -18,10 +20,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Text.Json" Version="6.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\CloudFileSystem.WebAPI\CloudFileSystem.WebAPI.csproj" />
+    <ProjectReference Include="..\..\CloudFileSystem.Common.Tests\CloudFileSystem.Common.csproj" />
   </ItemGroup>
 
 </Project>
