--- a/tests/CloudFileSystem.Common.Tests/CloudFileSystem.Common.csproj
+++ b/tests/CloudFileSystem.Common.Tests/CloudFileSystem.Common.csproj
@@ -3,13 +3,12 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
 	<LangVersion>10</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Verifications\" />
   </ItemGroup>
 
   <ItemGroup>
