fix: use dbcontext as repository, update behaviours (+ tests), fix automapper, fix entity configuration, fix response body content,

--- a/src/CloudFileSystem.Infrastructure/CloudFileSystem.Infrastructure.csproj
+++ b/src/CloudFileSystem.Infrastructure/CloudFileSystem.Infrastructure.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CloudFileSystem.Application\CloudFileSystem.Application.csproj" />
     <ProjectReference Include="..\CloudFileSystem.Domain\CloudFileSystem.Domain.csproj" />
   </ItemGroup>
