--- a/src/CloudFileSystem.WebAPI/CloudFileSystem.WebAPI.csproj
+++ b/src/CloudFileSystem.WebAPI/CloudFileSystem.WebAPI.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\CloudFileSystem.Infrastructure\CloudFileSystem.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Logs\" />
+  </ItemGroup>
+
 </Project>
