--- a/src/CloudFileSystem.WebAPI/appsettings.Development.json
+++ b/src/CloudFileSystem.WebAPI/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
   }
 }
